# vkOcclusionTest

./: Buffer.cpp  Buffer.h  CMakeLists.txt  ComputePipeline.cpp  ComputePipeline.h  FrameData.cpp  FrameData.h  GlobalTypes.h  GraphicsPipeline.cpp  GraphicsPipeline.h  HZBuffer.cpp  HZBuffer.h  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  PipelineCollection.cpp  PipelineCollection.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  main.cpp
shaders/: copy.comp  downsample.comp  full.frag  full.vert  main.frag  main.vert  query.comp
shaders/libs/: structures.glsl
